# PyRadio

./: README.md  main.py  pyproject.toml
src/pyradio/: controller.py  main.py  model.py  view.py
